--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@ plugins {
     id 'java'
 }
 
-version = '1.0.0'
+version = '1.0.1'
 
 group 'org.example'
-version '1.0-SNAPSHOT'
+version '1.0.1'
 
 repositories {
     mavenCentral()
