--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,14 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    //testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/args4j/args4j
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile group: 'args4j', name: 'args4j', version: '2.32'
-
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
 }
+
 jar {
     manifest {
         attributes(
@@ -23,5 +26,8 @@ jar {
                 'Main-Class': 'Main'
         )
     }
+}
+test {
+    useJUnitPlatform()
 }
 
